[gd_scene load_steps=2 format=3 uid="uid://b4khtcce7a86q"]

[ext_resource type="Script" uid="uid://c4qltgqaajhka" path="res://Scripts/MainScripts/enemy_spawner.gd" id="1_blbiy"]

[node name="EnemySpawner" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_blbiy")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="."]

[node name="TopLeft" type="Marker2D" parent="."]
position = Vector2(-1000, -600)

[node name="TopRight" type="Marker2D" parent="."]
position = Vector2(1000, -600)

[node name="BottomLeft" type="Marker2D" parent="."]
position = Vector2(-1000, 600)

[node name="BottomRight" type="Marker2D" parent="."]
position = Vector2(1000, 600)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
